Fix spacing in ParagraphExpand

--- a/src/components/kommunale-ytelser-content/KommunaleYtelserContent.module.css
+++ b/src/components/kommunale-ytelser-content/KommunaleYtelserContent.module.css
@@ -1,7 +1,3 @@
-.kommunaleYtelserContent {
-    padding: 1rem 0 1rem 1.5rem;
-}
-
 .kvpHeading {
     margin-top: 2rem;
     margin-bottom: 1.5rem;
